# sdk-nrf

./: west.yml
applications/asset_tracker_v2/: firmware.conf  overlay-memfault.conf  overlay-solar.conf  overlay-thingyworld-thingy91x.conf
applications/asset_tracker_v2/boards/: thingy91x_nrf9151_ns.conf
applications/asset_tracker_v2/doc/: debug_module.rst
applications/asset_tracker_v2/src/: main.c
boards/arm/thingy91_nrf9160/: nrf9160_shared_sram_planning.conf.dts  thingy91_nrf9160_partition_conf.dts
doc/nrf/: index.rst  links.txt
doc/nrf/external_comp/: memfault.rst
doc/nrf/test_and_optimize/: debugging.rst
include/: memfault_ncs.h
include/bluetooth/services/: mds.h
include/modem/: modem_info.h
include/tfm/: tfm_ioctl_api.h
lib/lte_link_control/: lte_lc.c
lib/modem_info/: modem_info.c
modules/memfault-firmware-sdk/: CMakeLists.txt  Kconfig  memfault_bt_metrics.c  memfault_etb_trace_capture.c  memfault_gnss_metrics.c  memfault_integration.c  memfault_integration_coredump.c  memfault_location_metrics.c  memfault_lte_metrics.c  memfault_ncs_metrics.c
modules/memfault-firmware-sdk/config/: memfault_metrics_heartbeat_extra.def
modules/memfault-firmware-sdk/include/: memfault_integration.h  (+2 more)
modules/trusted-firmware-m/: Kconfig
samples/bluetooth/peripheral_lbs/: CMakeLists.txt  Kconfig  mds.h  prj.conf
samples/bluetooth/peripheral_lbs/config/: memfault_metrics_heartbeat_config.def
samples/bluetooth/peripheral_lbs/src/: main.c  mds.c
subsys/: CMakeLists.txt
subsys/nonsecure/: CMakeLists.txt  fault.c  tfm_ns_fault.h
(+55 files in other folders)
